# Arduino_TinyML_ECG

./: .eslintrc.js  .gitignore  Dockerfile  README.md  app.yaml  eslint.config.js
.devcontainer/: devcontainer.json
.github/workflows/: Arduino_lint.yml  arduino_tests.yml  eslint.yml  main.yml  pylint.yml
assets/: app.js  filter.html  filter.js  index.html  style.css
python/: filter_config.json  main.py  requirements.txt
sketch/: LICENSE.txt  README.md  ecgProcessing.cc  ecgProcessing.cpp  ecgProcessing.h  ecgProcessing.hpp  sketch.ino  sketch.yaml
sketch/test/: CMakeLists.txt  testProcessing.cpp
